<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Showfa_Customer_android</string>
    <string name="welcome_to_swofa">Welcome To Swofa</string>
    <string name="_254">+254</string>
    <string name="or_connect_using_social_media">Or Connect Using Social Media</string>
    <string name="not_a_showfa_user">Not a Showfa USer?</string>
    <string name="register">Register</string>
    <string name="next">NEXT</string>
    <string name="btnSave" tools:ignore="ExtraTranslation">Save</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="national_id">National ID</string>
    <string name="km">0 KM</string>
    <string name="kes">KES 0.00</string>
    <string name="referral_code_optional">Referral Code (Optional)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="by_creating_an_account_you_agree_to_our">By Creating An Account,you Agree to our</string>
    <string name="terms_of_service">Terms Of Service </string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="already_a_showfa_user">Already a Showfa User?</string>
    <string name="sign_in">Sign In</string>
    <string name="address">Address</string>
    <string name="welcome_to">Welcome to</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="login_with">Login With</string>
    <string name="wrong">Somthing wenr to wrong\n</string>
    <string name="enter_numbe">Please Enter MobileNumber</string>
    <string name="enter_fnm">Please Enter FirstName</string>
    <string name="enter_otp">Please Enter Otp</string>
    <string name="enter_valid_otpotp">Please Enter Valide Otp</string>
    <string name="enter_lnm">Please Enter Lase Name</string>
    <string name="enter_email">Please Enter Email</string>
    <string name="enter_address">Please Enter Adress</string>
    <string name="selecte_gender">Please selected Gender</string>
    <string name="select_dob">Please Selected DateofBirth</string>
    <string name="enter_nationalId">Please Selected National ID</string>
    <string name="enter_referral_code">Please Enter Referral Code</string>
    <string name="please_enter_number">Please Enter Number</string>
    <string name="msg_title_okay">Title ok\n\n</string>
    <string name="verify_your_account">Verify Your Account</string>
    <string name="otp_message">Enter 6 digit number that is sent to your registered Mobile.</string>
    <string name="otp">OTP</string>
    <string name="text">Text</string>
    <string name="didn_t_receive_code">Didn\'t receive code?</string>
    <string name="resend">Resend</string>
    <string name="home">Home</string>
    <string name="please_book_your_desired_ride">Please book your desired ride</string>
    <string name="khushbu">Khushbu</string>
    <string name="trip_history">Trip History</string>
    <string name="previous_due">Previous Due</string>
    <string name="wallet">wallet</string>
    <string name="version_1_0_10">Version:1.0.10</string>
    <string name="delete_my_account">Delete My Account</string>
    <string name="logout">Log Out</string>
    <string name="pickup">PickUp</string>
    <string name="_522_5th_floor_i_square_corporate_park_sciecity">522,5th Floor,I square corporate park,sciecity</string>
    <string name="drop_off">Drop-off</string>
    <string name="where_to">Where To?</string>
    <string name="search_place">Search Place</string>
    <string name="saved_places">Saved Places</string>
    <string name="ahmedabad">Ahmedabad</string>
    <string name="ahmedabad_gujarat_india">Ahmedabad, Gujarat, India</string>
    <string name="title">Tittle</string>
    <string name="map_api_key">AIzaSyAXb1W-pTI0-1uedHOuR_0uLVqqfRCCYXk</string>
    <string name="hi">Hi,</string>
    <string name="upcoming">Upcoming</string>
    <string name="office">Office</string>
    <string name="other">Other</string>
    <string name="add_place">Add Place</string>
    <string name="internet_connection">No Internet Connection</string>
    <string name="please_check_internet">Please Check Your Internet</string>
    <string name="connection">Connection</string>
    <string name="ok">Ok</string>
    <string name="Okk">Okk</string>
    <string name="please_enter_ten_number">Please Enter Ten Number</string>
    <string name="invalid_number">Invalid Mobile Number</string>
    <string name="are_you_sure_logout">Are you sure you want to logout?</string>
    <string name="this_number_Not_register">This Number not registered with showfa.please registerd with us the sign in to the app</string>
    <string name="valide_email">Please Enter Valide email</string>
    <string name="search_option">Search Option</string>
    <string name="take_from_camera">Take from Camera</string>
    <string name="select_from_gallary">Select from gallary</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_setting">Permission Setting</string>
    <string name="setting">Setting</string>
    <string name="cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_trips">My Trips</string>
    <string name="id_2026">ID:2026</string>
    <string name="tuesday_may_9_4_50_pm">TuesDay,May 9,4:50 PM</string>
    <string name="distance">Distance</string>
    <string name="_0_01_km">0.01 KM</string>
    <string name="completed">Completed</string>
    <string name="title_activity_legal">LegalActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="no_data_found">No Data Found</string>
    <string name="invoice">Invoice</string>
    <string name="khushbu_gajera">Khushbu Gajera</string>
    <string name="you_rated">You Rated</string>
    <string name="tripDetail">Trip Detail</string>
    <string name="term_condition"><![CDATA[Term & Condition]]></string>
    <string name="otp_sent_successfully_on">OTP sent successfully on</string>
    <string name="your_mobile_number_or">Your Mobile number or</string>
    <string name="emailsent">email</string>
    <string name="title_activity_wallet">WalletActivity</string>
    <string name="title_activity_invoice">InvoiceActivity</string>
    <string name="total_prices">Total Prices</string>
    <string name="kes_0_00">KES 0.00</string>
    <string name="datetime"><![CDATA[Data & Time]]></string>
    <string name="services_type">Services Type</string>
    <string name="showfa_boda">Showfa Boda</string>
    <string name="vehical_info">Vehical Info</string>
    <string name="gj_1_vg_33">GJ-1 VG 33</string>
    <string name="boda_boda_kawasaki_motorcycles">Boda boda - kawasaki motorcycles</string>
    <string name="total_payable">Total Payable</string>
    <string name="key_0_00">KEY 0.00</string>
    <string name="download_invoice">Download Invoice</string>
    <string name="please_storege_permisstion">Please Allow Storege Permission</string>
    <string name="booking_id">Booking Id :</string>
    <string name="n10">N10</string>
    <string name="pay_now">Pay Now</string>
    <string name="_10_00">10.00</string>
    <string name="your_wallet_balance">Your Wallet Balance</string>
    <string name="key">KEY 0</string>
    <string name="active_your_wallet">Active your wallet</string>
    <string name="history">History</string>
    <string name="past_due_payment_for_booking">Past due payment for booking</string>
    <string name="booking_id_1075">Booking ID : 1075</string>
    <string name="_2023_02_28_14_46_59">2023-02-28 14:46:59</string>
    <string name="_233_00">-233.00</string>
    <string name="flat50">Flat50</string>
    <string name="valid_till_30_12_2023">Valid till 30/12/2023</string>
    <string name="promo_codes">Promo Codes</string>
    <string name="support">Support</string>
    <string name="describe_your_issue">Describe Your Issue</string>
    <string name="done">Done</string>
    <string name="edit_Profile">Edit Profile</string>
    <string name="legal">Legal</string>
    <string name="session_expire" tools:ignore="ExtraTranslation">Session Expire</string>
    <string name="link_terms">https://www.tantaxitanzania.com/page/terms-conditions-passengers</string>
    <string name="link_privacy">https://www.tantaxitanzania.com/page/privacy-policy</string>
    <string name="_5">5</string>
    <string name="standard">Standard</string>
    <string name="_5_mit">5 mit</string>
    <string name="ksh_5_50">Ksh 5.50</string>
    <string name="ksh5_50">ksh5.50</string>
</resources>