<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_background_tab">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtBookingId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/booking_id"
            android:fontFamily="@font/font_bold"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/txtBookingId"
            app:layout_constraintTop_toTopOf="@id/txtBookingId"
            android:text="@string/n10"
            app:layout_constraintEnd_toStartOf="@id/txtPaymentNow"
            android:textColor="@color/darkGray"
            android:textSize="14sp"
            android:layout_marginStart="10dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtPaymentNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_now"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/font_bold"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent"/>

        <include
            android:id="@+id/includePickUpDropOff"
            layout="@layout/item_pickup_dropoff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtBookingId" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtPreviousDue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous_due"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/font_bold"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/includePickUpDropOff"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:textSize="14sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtPreviousCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10_00"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/font_regular"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtPreviousDue"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"/>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>