<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/pastPaymentBooking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MaterialTextView"
            android:text="@string/past_due_payment_for_booking"
            android:textSize="14sp"
            android:fontFamily="@font/font_bold"
            android:textStyle="bold"
            android:layout_marginStart="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtBookingId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MaterialTextView"
            android:text="@string/booking_id_1075"
            android:textSize="14sp"
            android:fontFamily="@font/font_bold"
            android:textStyle="bold"
            android:layout_marginStart="20sp"
            app:layout_constraintTop_toBottomOf="@id/pastPaymentBooking"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtBookingPastAndReceived"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MaterialTextView"
            android:text="@string/_233_00"
            android:textColor="@color/green"
            android:layout_marginEnd="50dp"
            android:textSize="14sp"
            android:fontFamily="@font/font_bold"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/pastPaymentBooking"
            app:layout_constraintEnd_toEndOf="parent" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtDateAndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MaterialTextView"
            android:text="@string/_2023_02_28_14_46_59"
            android:textSize="14sp"
            android:fontFamily="@font/font_bold"
            android:textStyle="bold"
            android:textColor="@color/darkGray"
            android:layout_marginStart="20sp"
            app:layout_constraintTop_toBottomOf="@id/txtBookingId"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@id/txtDateAndTime"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/gray"/>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>