<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="ui.otpVerification.OtpViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/constraint"
        tools:context="ui.otpVerification.OtpVerificationActivity">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgBg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_login_header_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/welcomeToSwofa"
            style="@style/MaterialTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:text="@string/verify_your_account"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtOtpverify"
            style="@style/MaterialTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/otp_message"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgBg" />



        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtOtp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/gray"
            android:gravity="center"
            android:letterSpacing="1.5"
            android:maxLength="6"
            android:inputType="number"
            android:hint="@string/otp"
            android:textColor="@color/gray"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtOtpverify" />

        <include
            android:id="@+id/imgLoader"
            android:layout_height="0dp"
            android:layout_width="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            layout="@layout/item_loader"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/edtOtp"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/MaterialTextView"
            android:id="@+id/txtReceivedCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/didn_t_receive_code"
            app:layout_constraintBottom_toTopOf="@id/txtNext"
            android:layout_marginEnd="10dp"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"
            app:layout_constraintEnd_toStartOf="@id/txtTime"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/MaterialTextView"
            android:id="@+id/txtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@+id/txtReceivedCode"
            app:layout_constraintTop_toTopOf="@id/txtReceivedCode" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/MaterialTextView"
            android:id="@+id/txtResend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend"
            android:textSize="16sp"
            android:visibility="invisible"
            android:onClick="@{()->viewModel.navigator.resendOtp()}"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@+id/txtReceivedCode"
            app:layout_constraintTop_toTopOf="@id/txtReceivedCode" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/txtNext"
            style="@style/MaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:onClick="@{()->viewModel.navigator.onNextButton()}"
            app:layout_constraintBottom_toBottomOf="parent" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>